--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -5,7 +5,7 @@ jobs:
     steps:
       - IN: ship_ver #version resource hard coded current release version in the resource
         switch: off
-      - IN: bldami_repo #gitrepo resource where we have to execute sh file
+      - IN: script_repo #gitrepo resource where we have to execute sh file
         switch: off
       - IN: ship_dh #
       - TASK:
