--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -18,13 +18,11 @@ jobs:
   - name: build_test
     type: runSh
     steps:
-      - IN: ship_ver #version resource hard coded current release version in the resource
-        #switch: off
+      - IN: push_image_tag
       - IN: script_repo #gitrepo resource where we have to execute sh file
         #switch: off
-      - IN: ship_dh #
       - TASK:
-        - script: IN/bldami_repo/gitRepo/nextJob/pre_jobInfo.sh
+        - script: IN/script_repo/gitRepo/nextJob/pre_jobInfo.sh
     on_success:
       - script: echo 'succeeded'
     on_failure:
