--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - IN: push_image_tag
       - IN: script_repo #gitrepo resource where we have to execute sh file
-        #switch: off
+        switch: off
       - TASK:
         - script: IN/script_repo/gitRepo/nextJob/pre_jobInfo.sh
     on_success:
