--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -1,5 +1,13 @@
 jobs:
- 
+
+  - name: release-pushimgrunsh
+    type: release
+    steps:
+      - IN: ship_ver
+      - IN: push_image_tag
+      - TASK: managed
+        bump: major
+
   - name: push_image_tag
     type: runSh
     steps:
