--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -28,12 +28,12 @@ jobs:
   - name: push_image_tag2
     type: runSh
     steps:
-      #- IN: ship_ver #version resource hard coded current release version in the resource
+      - IN: ship_ver #version resource hard coded current release version in the resource
        # switch: off
       - IN: scriptami_repo #gitrepo resource where we have to execute sh file
        # switch: off
-      #- IN: ship_dh #
-      #- IN: test_params
+      - IN: ship_dh #
+      - IN: test_params
       - TASK:
         - script: IN/scriptami_repo/gitRepo/imagesPush/pushTags.sh 
         
