--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -17,6 +17,7 @@ jobs:
        # switch: off
       - IN: ship_dh #
       - IN: test_params
+      - IN: test_out_img2
       - TASK:
         - script: IN/scriptami_repo/gitRepo/imagesPush/pushTags.sh 
       - OUT: test_out_img
@@ -79,4 +80,9 @@ jobs:
       - IN: ddc_cluster
       - IN: ddc_dopts
       - TASK: managed
+      
+  - name: manifest_dep2
+    type: manifest
+    steps:
+      - IN: deploy_img2
       
