--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -15,14 +15,13 @@ jobs:
        # switch: off
       - IN: scriptami_repo #gitrepo resource where we have to execute sh file
        # switch: off
-      - IN: ship_dh #
+      - IN: ship_dh 
       - IN: test_params
       - IN: manifest_dep2
       - TASK:
         - script: IN/scriptami_repo/gitRepo/imagesPush/pushTags.sh 
       - OUT: test_out_img
       - OUT: test_out_img2
-      - OUT: deploy_img2
     on_success:
       - script: echo 'succeeded'
     on_failure:
