--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -81,8 +81,8 @@ jobs:
       - IN: ddc_dopts
       - TASK: managed
       
-  - name: manifest_dep3
-    type: manifest
-    steps:
-      - IN: deploy_img2
+ # - name: manifest_dep3
+ #   type: manifest
+ #   steps:
+ #     - IN: deploy_img2
       
