--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -16,7 +16,14 @@ resources:
   - name: ship_aws
     type: integration
     integration: "ship-aws"
-    
+  
+  - name: awsiam_cluster
+    type: cluster
+    integration: plv2-ecs
+    pointer:
+      sourceName : "test"
+      region: "us-east-1"
+
   - name: scriptami_repo
     type: gitRepo
     integration: github
@@ -109,7 +116,7 @@ resources:
     seed:
       interval: "1 0 * * *"  
 
-  - name: extdopttp-dopts1
+  - name: awsiam-dopts1
     type: dockerOptions
     version:
-      memory: 128
+      memory: 64
