--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -85,7 +85,20 @@ jobs:
     type: manifest
     steps:
       - IN: test-trigger
-   
+  
+  - name: manifest_dep4
+    type: manifest
+    steps:
+      - IN: deploy_img2
+  
+  - name: deploy_awsiam
+    type: deploy
+    steps:
+      - IN: manifest_dep4
+      - IN: awsiam_cluster
+      - IN: awsiam-dopts1
+      - TASK: managed
+      
   - name: build_cliTime
     type: runCLI
     steps:
