--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -1,109 +1,19 @@
 jobs:
 
-  - name: release-pushimgrunsh
-    type: release
+  - name: push_image_tag
+    type: runSh
     steps:
-      - IN: ship_ver
-      - IN: push_image_tag
-      - TASK: managed
-        bump: major
+      - IN: scriptami_repo
+      - IN: scriptbase_repo
+      - TASK:
+        - script: IN/scriptami_repo/gitRepo/imagesPush/pushTags.sh 
+        - script: IN/scriptami_repo/gitRepo/bldtest.sh      
 
   - name: push_image_tag
     type: runSh
     steps:
-      - IN: ship_ver #version resource hard coded current release version in the resource
-       # switch: off
-      - IN: scriptami_repo #gitrepo resource where we have to execute sh file
-       # switch: off
-      - IN: ship_dh 
-      - IN: test_params
-     # - IN: manifest_dep3
+     # - IN: ship_ver 
+      - IN: scriptami_repo
       - TASK:
-        - script: IN/scriptami_repo/gitRepo/imagesPush/pushTags.sh 
-      - OUT: test_out_img
-      - OUT: test_out_img2
-    on_success:
-      - script: echo 'succeeded'
-    on_failure:
-      - script: echo 'failed'
-
-  - name: push_image_tag2
-    type: runSh
-    steps:
-      - IN: ship_ver #version resource hard coded current release version in the resource
-       # switch: off
-      - IN: scriptami_repo #gitrepo resource where we have to execute sh file
-       # switch: off
-      - IN: ship_dh #
-      - IN: test_params
-      - TASK:
-        - script: IN/scriptami_repo/gitRepo/imagesPush/oldPushTags.sh
-        
-  - name: build_sh
-    type: runSh
-    steps:
-      - IN: push_image_tag
-      - IN: ship_aws
-      - IN: scriptami_repo 
-        switch: off
-      - TASK:
-        - script: IN/scriptami_repo/gitRepo/nextJob/pre_jobInfo.sh
-    on_success:
-      - script: echo 'succeeded'
-    on_failure:
-      - script: echo 'failed'      
-    
-  - name: build_cli
-    type: runCLI
-    steps:
-      - IN: push_image_tag
-      - IN: ship_dh_cli
-      - IN: scriptbase_repo
-       # switch: off
-      - TASK:
-        - script: IN/scriptbase_repo/gitRepo/bldtest.sh
-      #- OUT: base_img
-    on_success:
-      - script: echo 'succeeded'
-    on_failure:
-      - script: echo 'failed'   
-
-  - name: manifest_dep
-    type: manifest
-    steps:
-      - IN: deploy_img       
-      
-  - name: deploy_ddc
-    type: deploy
-    steps:
-      - IN: manifest_dep
-      - IN: ddc_cluster
-      - IN: ddc_dopts
-      - TASK: managed
-      
-  - name: manifest_dep3
-    type: manifest
-    steps:
-      - IN: test-trigger
-  
-  - name: manifest_dep4
-    type: manifest
-    steps:
-      - IN: deploy_img2
-  
-  - name: deploy_awsiam
-    type: deploy
-    steps:
-      - IN: manifest_dep4
-      - IN: awsiam_cluster
-      - IN: awsiam-dopts1
-      - TASK: managed
-      
-  - name: build_cliTime
-    type: runCLI
-    steps:
-      - IN: test-trigger
-      - IN: scriptbase_repo
-       # switch: off
-      - TASK:
-        - script: IN/scriptbase_repo/gitRepo/bldtest.sh
+        - script: IN/scriptami_repo/gitRepo/bldtest.sh
+   
