--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -1,6 +1,6 @@
 jobs:
 
-  - name: push_image_tag
+  - name: push_image_tag1
     type: runSh
     steps:
       - IN: scriptami_repo
@@ -9,7 +9,7 @@ jobs:
         - script: IN/scriptami_repo/gitRepo/imagesPush/pushTags.sh 
         - script: IN/scriptami_repo/gitRepo/bldtest.sh      
 
-  - name: push_image_tag
+  - name: push_image_tag1
     type: runSh
     steps:
      # - IN: ship_ver 
