--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -128,10 +128,10 @@ resources:
     version:
       memory: 64
 
-  - name: test_out_img2
-    type: image
-    integration: docker
-    pointer:
-      sourceName: "shippabledocker/ship_plv2node"
-    seed:
-      versionName: "latest123"
+  #- name: test_out_img2
+   # type: image
+   # integration: docker
+   # pointer:
+    #  sourceName: "shippabledocker/ship_plv2node"
+    #seed:
+    #  versionName: "latest123"
