--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -27,17 +27,17 @@ jobs:
     on_failure:
       - script: echo 'failed'
 
-  - name: push_image_tag2
-    type: runSh
-    steps:
-      - IN: ship_ver #version resource hard coded current release version in the resource
-       # switch: off
-      - IN: scriptami_repo #gitrepo resource where we have to execute sh file
-       # switch: off
-      - IN: ship_dh #
-      - IN: test_params
-      - TASK:
-        - script: IN/scriptami_repo/gitRepo/imagesPush/oldPushTags.sh
+ # - name: push_image_tag2
+ #   type: runSh
+ #   steps:
+   #   - IN: ship_ver #version resource hard coded current release version in the resource
+    #   # switch: off
+    #  - IN: scriptami_repo #gitrepo resource where we have to execute sh file
+    #   # switch: off
+    #  - IN: ship_dh #
+    #  - IN: test_params
+    #  - TASK:
+     #   - script: IN/scriptami_repo/gitRepo/imagesPush/oldPushTags.sh
         
   - name: build_sh
     type: runSh
