--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -67,8 +67,15 @@ jobs:
     on_success:
       - script: echo 'succeeded'
     on_failure:
-      - script: echo 'failed'   
-
+      - script: echo 'failed'  
+      
+ - name: build_cliforTagsNReleases
+    type: runCLI
+    steps:
+      - IN: scriptami_TagsReleases
+      - TASK:
+        - script: IN/scriptami_TagsReleases/gitRepo/imagesPush/pushTags.sh 
+        
   - name: test-forkrunsh
     type: runCLI
     steps:
