--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -22,7 +22,8 @@ jobs:
       - TASK:
         - script: IN/scriptami_repo/gitRepo/imagesPush/pushTags.sh 
       - OUT: test_out_img
-      - OUT: test_out_img2
+   #   - OUT: test_out_img2
+      - OUT: sampleNod_ciRepo
     on_success:
       - script: echo 'succeeded'
     on_failure:
@@ -49,7 +50,6 @@ jobs:
         switch: off
       - TASK:
         - script: IN/scriptami_repo/gitRepo/nextJob/pre_jobInfo.sh
-      - OUT: sampleNod_ciRepo
     on_success:
       - script: echo 'succeeded'
     on_failure:
