--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -8,7 +8,11 @@ resources:
   - name: ship_dh
     type: integration
     integration: "docker"
-
+ 
+  - name: sampleNod_ciRepo
+    type: ciRepo
+    integration: "github"
+  
   - name: ship_dh_cli
     type: cliConfig
     integration: "docker"
