--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -68,6 +68,8 @@ resources:
           - zep*
       buildOnPullRequest: true
       buildOnCommit: true
+    flags:
+      - "sampleNod-gitrepo"
       
   - name: scriptbase_repo
     type: gitRepo
