--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -9,7 +9,7 @@ resources:
     type: integration
     integration: "docker"
 
-  - name: ship_dh_cli
+  - name: ship_dh_cli1
     type: cliConfig
     integration: "docker"
     
@@ -24,12 +24,12 @@ resources:
       sourceName : "test"
       region: "us-east-1"
       
-  - name: ar-ecscluster
-    type: cluster
-    integration: ship-aws
-    pointer:
-      sourceName : #"testCL"
-      region: #"us-west-2"
+ # - name: ar-ecscluster
+  #  type: cluster
+   # integration: ship-aws
+   # pointer:
+    #  sourceName : #"testCL"
+     # region: #"us-west-2"
       
   - name: scriptami_repo
     type: gitRepo
